--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
     name: ocr-service
-    env: docker
-    dockerfilePath: Dockerfile
-    plan: free 
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: cd ocr-service && gunicorn wsgi:app
+    plan: free
