--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,11 @@ services:
   - type: web
     name: ocr-service
     env: python
-    buildCommand: pip install -r requirements.txt && pip install gunicorn
-    startCommand: gunicorn wsgi:app
+    buildCommand: |
+      python -m venv venv
+      . venv/bin/activate
+      pip install -r requirements.txt
+    startCommand: |
+      . venv/bin/activate
+      gunicorn wsgi:app
     plan: free
