--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,8 @@ services:
     name: ocr-service
     env: python
     buildCommand: |
-      python -m venv venv
-      . venv/bin/activate
+      pip install --upgrade pip
+      pip install gunicorn
       pip install -r requirements.txt
-    startCommand: |
-      . venv/bin/activate
-      gunicorn wsgi:app
+    startCommand: python -m gunicorn wsgi:app
     plan: free
