--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,6 @@
 services:
   - type: web
     name: ocr-service
-    env: python
-    buildCommand: |
-      apt-get update && apt-get install -y tesseract-ocr
-      pip install --upgrade pip
-      pip install gunicorn
-      pip install -r requirements.txt
-    startCommand: python -m gunicorn wsgi:app --bind 0.0.0.0:$PORT
+    env: docker
+    dockerfilePath: Dockerfile
     plan: free
