--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,9 @@
 services:
   - type: web
     name: ocr-service
-    env: docker
-    dockerfilePath: Dockerfile
+    env: python
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: gunicorn wsgi:app
     plan: free
