--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,9 @@ services:
   - type: web
     name: ocr-service
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn wsgi:app
+    buildCommand: |
+      apt-get update && apt-get install -y tesseract-ocr
+      pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT
     plan: free
