--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 flask==3.0.2
 pytesseract==0.3.10
-Pillow==10.2.0 
+Pillow==10.2.0
+gunicorn==21.2.0
+Werkzeug==3.1.3
+Jinja2==3.1.6
+itsdangerous==2.2.0
+click==8.2.1
+blinker==1.9.0
