--- a/render.yaml
+++ b/render.yaml
@@ -6,5 +6,8 @@ services:
       apt-get update && apt-get install -y tesseract-ocr
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT
+      echo "export TESSDATA_PREFIX=/usr/share/tesseract-ocr/4.00/tessdata" >> ~/.bashrc
+    startCommand: |
+      export TESSDATA_PREFIX=/usr/share/tesseract-ocr/4.00/tessdata
+      gunicorn wsgi:app --bind 0.0.0.0:$PORT
     plan: free
